--- a/invoicegeneratefronted/.env
+++ b/invoicegeneratefronted/.env
@@ -1,1 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_YXNzdXJlZC1rb2ktNjMuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_API_BASE_URL = https://invoice-generator-fullstack-production.up.railway.app/api
