Fix all bugs and complete the project

--- a/invoicegeneratorapi/src/main/resources/application.properties
+++ b/invoicegeneratorapi/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
+spring.data.mongodb.uri=mongodb://localhost:27017/invoicedb
 
 # ==================================
 # GMAIL SMTP CONFIGURATION
@@ -12,6 +13,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 logging.level.org.springframework.mail=DEBUG
 logging.level.jakarta.mail=DEBUG
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+
 
 clerk.issuer = https://assured-koi-63.clerk.accounts.dev
  clerk.jwks-url = https://assured-koi-63.clerk.accounts.dev/.well-known/jwks.json
