--- a/invoicegeneratorapi/src/main/resources/application.properties
+++ b/invoicegeneratorapi/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 
-spring.data.mongodb.uri=mongodb://localhost:27017/invoicedb
+spring.data.mongodb.uri=${MONGO_URL}
 
-# ==================================
-# GMAIL SMTP CONFIGURATION
-# ==================================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=saad914938@gmail.com
-spring.mail.password=saznosrgeecvgjjf 
+
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -17,7 +15,7 @@ logging.level.jakarta.mail=DEBUG
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 
 
-clerk.issuer = https://assured-koi-63.clerk.accounts.dev
- clerk.jwks-url = https://assured-koi-63.clerk.accounts.dev/.well-known/jwks.json
+clerk.issuer =${CLERK_ISSUER}
+ clerk.jwks-url = ${CLERK_JWKS_URL}
 
-clerk.webhook.signing-secret =whsec_suso28knez4RyENYX55Gca19RQf9Dvl
+clerk.webhook.signing-secret =${CLERK_SIGNING_SECRET}
